[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/pow/pow-frame-10.png" type="Texture" id=1]
[ext_resource path="res://assets/pow/pow-frame-1.png" type="Texture" id=2]
[ext_resource path="res://assets/pow/pow-frame-2.png" type="Texture" id=3]
[ext_resource path="res://assets/pow/pow-frame-3.png" type="Texture" id=4]
[ext_resource path="res://assets/pow/pow-frame-9.png" type="Texture" id=5]
[ext_resource path="res://assets/pow/pow-frame-4.png" type="Texture" id=6]
[ext_resource path="res://assets/pow/pow-frame-5.png" type="Texture" id=7]
[ext_resource path="res://assets/pow/pow-frame-7.png" type="Texture" id=8]
[ext_resource path="res://assets/pow/pow-frame-6.png" type="Texture" id=9]
[ext_resource path="res://assets/pow/pow-frame-8.png" type="Texture" id=10]
[ext_resource path="res://scene/powerup/PowerUp.gd" type="Script" id=11]
[ext_resource path="res://assets/audio/Powerup.wav" type="AudioStream" id=12]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=1]

[node name="PowerUp" type="Area2D" groups=[
"powerup",
]]
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 2 )
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="ShowTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PickUpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[connection signal="area_entered" from="." to="." method="pickup"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="ShowTimer" to="." method="_on_ShowTimer_timeout"]
